--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -1,6 +1,8 @@
 {% load static %}
+{% csrf_token %}
 
 <link rel="stylesheet" href="{% static 'style.css' %}">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
 {% if latest_question_list %}
     <ul>
@@ -11,3 +13,36 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+<h1>Do something with AJAX</h1>
+<p>Input a username. AJAX, will update an async message.</p>
+<p id="response_msg"></p>
+<form id="username_form">
+    <label for="username_txt">Name:</label>
+    <input type="text" id="username_input" name="username_txt" />
+    <button type="button" id="username_button">Click</button>
+</form>
+
+{% block javascript %}
+    <script>
+        $('#username_button').on('click', function (e) {
+            e.preventDefault(); // Prevent the default form submission behavior
+            var value = $('#username_input').val(); // Get the username value from the input
+            const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+            $.ajax({
+                url: 'username/',
+                type: "POST",
+                dataType: "json",
+                data: {payload: value},
+                headers: {"X-CSRFToken": csrftoken},
+                mode: 'same-origin',
+                success: (data) => {
+                    $('#response_msg').text(data.msg); // Display response message in the paragraph
+                },
+                error: (error) => {
+                    console.log(error);
+                }
+            });
+        });
+    </script>  
+{% endblock %}
